# Automate_code_analyzar

./: GAME.md  README.md  generated_game.py  pyproject.toml  report.md  research_summary.md
src/research_agent2/: crew.py  game_developer.py  main.py
src/research_agent2/config/: agents.yaml  tasks.yaml
